--- a/frontend/src/components/NavigationBar.css
+++ b/frontend/src/components/NavigationBar.css
@@ -1,6 +1,37 @@
 #navigation-bar {
-    border: 1px;
-    border-style: solid;
-    padding: 10px;
-    background-color: greenyellow;
-}
+    display: flex;
+    align-items: center;
+    background-color: #a0522d;
+    top: 0;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    position: fixed;
+    left: 20px;
+    right: 20px;
+    z-index: 1000;
+  }
+
+  .nav-button {
+    background-color: #a0522d;
+    color: white;
+    padding: 20px;
+    margin-left: 18px;
+    margin-right: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+  }
+
+  .nav-button:hover {
+    background-color: #8b4513;
+  }
+
+  body {
+    margin-top: 100px;
+  }
