--- a/frontend/src/components/BrowsableChessboard.css
+++ b/frontend/src/components/BrowsableChessboard.css
@@ -15,7 +15,11 @@
     justify-content: center;
     position: relative;
     transform: scale(1.5);
-    border: 1px solid #a0522d;
+    border: 1px solid #c0bdbb;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
 }
 
 #nextChessboardButton,
@@ -24,7 +28,7 @@
     color: white;
     padding: 15px;
     margin-right: 10px;
-    margin-top: 5px; /* Add margin-top to move buttons down */
+    margin-top: 5px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
