--- a/frontend/src/components/SubmitForm.css
+++ b/frontend/src/components/SubmitForm.css
@@ -1,14 +1,34 @@
+#file-input {
+    display: none;
+}
+
+#drag-and-drop-container {
+    position: relative;
+}
+
+#drag-and-drop-area {
+    border: 2px dashed #a0522d;
+    padding: 20px;
+    text-align: center;
+    width: 300px;
+    height: 200px;
+    margin-left: 20px;
+    font-size: 18px;
+}
+
 #submit-button {
     background-color: #a0522d;
     color: white;
     padding: 15px;
-    margin-right: 10px;
-    margin-top: 5px;
+    margin-top: 10px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
     transition: background-color 0.3s ease;
+    position: relative;
+    left: 10%;
+    transform: translateX(-50%);
 }
 
 #submit-button:hover {
