--- a/frontend/src/components/BrowsableChessboard.css
+++ b/frontend/src/components/BrowsableChessboard.css
@@ -1,6 +1,6 @@
 #chessboard-header {
     text-align: center;
-    font-size: 24px;
+    font-size: 1.8em;
     margin-bottom: 10px;
 }
 
@@ -8,18 +8,19 @@
     margin: auto;
     width: min-content;
     height: min-content;
-    padding: 30px;
+    padding: 3%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    position: relative;
+    position: fixed;
     transform: scale(1.5);
     border: 1px solid #c0bdbb;
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
     border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
+    margin-top: 5%;
 }
 
 #nextChessboardButton,
@@ -39,4 +40,8 @@
 #nextChessboardButton:hover,
 #previousChessboardButton:hover {
     background-color: #8b4513;
+}
+
+body {
+    margin-bottom: 0;
 }
