--- a/frontend/src/components/SubmitForm.css
+++ b/frontend/src/components/SubmitForm.css
@@ -3,33 +3,35 @@
 }
 
 #drag-and-drop-container {
-    position: relative;
+    position: fixed;
+    top: 100px;
+    left: 20px;
 }
 
 #drag-and-drop-area {
     border: 2px dashed #a0522d;
-    padding: 20px;
+    padding: 4%;
     text-align: center;
-    width: 300px;
+    width: 80%;
+    max-width: 400px;
     height: 200px;
-    margin-left: 20px;
-    font-size: 18px;
-    cursor: pointer;
+    margin-left: 10%;
+    font-size: 1.2em;
 }
 
 #submit-button {
     background-color: #a0522d;
     color: white;
-    padding: 15px;
-    margin-top: 10px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 1.1em;
     transition: background-color 0.3s ease;
-    position: relative;
+    position: fixed;
     left: 10%;
     transform: translateX(-50%);
+    padding: 1.2%;
+    margin-top: 0.5%;
 }
 
 #submit-button:hover {
