--- a/frontend/src/components/SubmitForm.css
+++ b/frontend/src/components/SubmitForm.css
@@ -10,7 +10,7 @@
 
 #drag-and-drop-area {
     border: 2px dashed #a0522d;
-    padding: 4%;
+    padding: 8%;
     text-align: center;
     width: 80%;
     max-width: 400px;
@@ -27,11 +27,12 @@
     cursor: pointer;
     font-size: 1.1em;
     transition: background-color 0.3s ease;
-    position: fixed;
-    left: 10%;
+    position: absolute;
+    left: 57%;
     transform: translateX(-50%);
-    padding: 1.2%;
+    padding: 6%;
     margin-top: 0.5%;
+    bottom: -30%;
 }
 
 #submit-button:hover {
