--- a/frontend/src/components/BrowsableChessboard.css
+++ b/frontend/src/components/BrowsableChessboard.css
@@ -1,10 +1,12 @@
 #chessboard-header {
     text-align: center;
     font-size: 1.8em;
-    margin-bottom: 10px;
+    margin-bottom: 3%;
 }
 
 #BrowsableChessboard {
+    position: fixed;
+    left: 50%;
     margin: auto;
     width: min-content;
     height: min-content;
@@ -13,13 +15,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    position: fixed;
     transform: scale(1.5);
     border: 1px solid #c0bdbb;
-    border-top-right-radius: 20px;
-    border-top-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
+    border-radius: 20px;
     margin-top: 5%;
 }
 
@@ -27,13 +25,13 @@
 #previousChessboardButton {
     background-color: #a0522d;
     color: white;
-    padding: 15px;
+    padding: 1em;
     margin-right: 10px;
     margin-top: 5px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 1em;
     transition: background-color 0.3s ease;
 }
 
@@ -43,5 +41,5 @@
 }
 
 body {
-    margin-bottom: 0;
+    margin-bottom: 0%;
 }
