--- a/frontend/src/components/ChessGameView.css
+++ b/frontend/src/components/ChessGameView.css
@@ -8,19 +8,36 @@
 #submit-form-container {
     display: flex;
     flex-direction: column;
+    margin-bottom: 20px;
 }
 
 #move-list-container {
-    position: absolute;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 400px;
     left: 3%;
-    right: 100;
-    height: 100%;
-    max-height: 450px;
-    margin-top: 20%;
-    padding: 0.7%;
+    right: 10%;
+    width: 87%;
+    max-width: 200px;
+    height: 40vh;
+    margin-top: 5vh;
+    margin-bottom: 20px;
+    padding: 1.5%;
     border: 1px solid #c0bdbb;
-    border-top-right-radius: 20px;
-    border-top-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
+    border-radius: 20px;
+}
+
+
+#chessboard-container {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 110px;
+    width: calc(100% - 40px);
+    max-width: 800px;
+    height: calc(100% - 500px - 20px);
+    margin-top: 20px;
+    margin-left: 20px;
+    padding: 20px;
 }
