--- a/frontend/src/components/ChessGameView.css
+++ b/frontend/src/components/ChessGameView.css
@@ -1,43 +1,57 @@
 #chess-game-view {
     display: flex;
+    align-items: flex-start;
     flex-direction: column;
-    align-items: center;
-    margin-top: 5%;
+    margin-top: 100px;
+}
+
+#first-row {
+    display: flex;
+    justify-content: space-between;
 }
 
 #submit-form-container {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
 }
 
 #move-list-container {
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    top: 450px;
-    left: 3%;
-    right: 10%;
-    width: 87%;
-    max-width: 100px;
-    margin-top: 5vh;
-    margin-bottom: 20px;
-    padding: 1.2%;
     border: 1px solid #c0bdbb;
     border-radius: 20px;
-    height: 40vh;
-    max-height: 40vh;
+    padding: 2%;
+    text-align: center;
+    width: 8%;
+    min-width: 150px;
+    max-width: 150px;
+    height: 350px;
+    margin-left: 20px;
+    font-size: 1.2em;
+    margin-top: -230px;
 }
 
 #chessboard-container {
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    top: 110px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: auto;
     width: calc(100% - 40px);
     max-width: 800px;
     height: calc(100% - 500px - 20px);
-    margin-top: 20px;
-    margin-left: 20px;
-    padding: 20px;
+    margin-top: 15%;
+    margin-left: 60%;
+}
+
+#winner-message {
+    margin-right: auto;
+    position: relative;
+    right: 10%;
+}
+
+@media (max-width: 300px) {
+    #chess-game-view {
+      flex-direction: column;
+    }
+
+
+  #move-list-container {
+    margin-right: 0;
+  }
 }
