--- a/frontend/src/components/SubmitForm.css
+++ b/frontend/src/components/SubmitForm.css
@@ -3,19 +3,20 @@
 }
 
 #drag-and-drop-container {
-    position: fixed;
-    top: 100px;
-    left: 20px;
+    top: 10%;
+    left: 53%;
 }
 
 #drag-and-drop-area {
     border: 2px dashed #a0522d;
-    padding: 8%;
+    padding: 20%;
     text-align: center;
     width: 80%;
+    min-width: 250px;
     max-width: 400px;
     height: 200px;
     margin-left: 10%;
+    margin-bottom: 5%;
     font-size: 1.2em;
 }
 
@@ -27,8 +28,9 @@
     cursor: pointer;
     font-size: 1.1em;
     transition: background-color 0.3s ease;
-    position: absolute;
-    left: 57%;
+    position:relative;
+    left: 75%;
+    right: 100%;
     transform: translateX(-50%);
     padding: 6%;
     margin-top: 0.5%;
