--- a/frontend/src/components/SubmitForm.css
+++ b/frontend/src/components/SubmitForm.css
@@ -1,3 +1,19 @@
+#submit-header {
+    text-align: center;
+    font-size: 1.8em;
+    margin-left: 50%;
+    margin-bottom: 3%;
+}
+
+#difficulty-config {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1em;
+    margin-left: 50%;
+    min-width: 150px;
+}
+
 #file-input {
     display: none;
 }
@@ -34,7 +50,7 @@
     transform: translateX(-50%);
     padding: 6%;
     margin-top: 0.5%;
-    bottom: -30%;
+    bottom: -10%;
 }
 
 #submit-button:hover {
