--- a/frontend/src/components/AdvantageBar.css
+++ b/frontend/src/components/AdvantageBar.css
@@ -1,10 +1,10 @@
-.evaluation-bar {
+.advantage-bar {
     width: 50px;
     height: 490px;
     background: linear-gradient(to bottom, #b5876b, #f0dec7);
     position: relative;
     border: 1px solid #c0bdbb;
-    margin-left: 2%;
+    margin-right: 5%;
 }
 
 .division-line {
