--- a/frontend/src/components/EvaluationBar.css
+++ b/frontend/src/components/EvaluationBar.css
@@ -1,10 +1,10 @@
-.advantage-bar {
+.evaluation-bar {
     width: 50px;
     height: 490px;
     background: linear-gradient(to bottom, #b5876b, #f0dec7);
     position: relative;
     border: 1px solid #c0bdbb;
-    margin-right: 5%;
+    margin-left: 2%;
 }
 
 .division-line {
