--- a/frontend/src/components/AdvantageBar.css
+++ b/frontend/src/components/AdvantageBar.css
@@ -1,4 +1,4 @@
-.evaluation-bar {
+.advantage-bar {
     width: 50px;
     height: 490px;
     background: linear-gradient(to bottom, #b5876b, #f0dec7);
