--- a/frontend/src/components/GameView.css
+++ b/frontend/src/components/GameView.css
@@ -46,6 +46,17 @@
     right: 10%;
 }
 
+#statistics{
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: auto;
+    width: calc(100% - 40px);
+    max-width: 600px;
+    margin-top: 2%;
+    margin-left: 33%;
+}
+
+
 @media (max-width: 300px) {
     #chess-game-view {
         flex-direction: column;
