--- a/frontend/src/components/SubmitForm.css
+++ b/frontend/src/components/SubmitForm.css
@@ -5,7 +5,7 @@
     margin-bottom: 3%;
 }
 
-#difficulty-config {
+#elo-config {
     display: flex;
     flex-direction: column;
     align-items: center;
