--- a/frontend/src/scss/SubmitForm.scss
+++ b/frontend/src/scss/SubmitForm.scss
@@ -1,24 +1,27 @@
 #drag-and-drop-container {
     top: 10%;
     left: 53%;
+    height: 600px;
+    width: 500px;
+    padding: 10px;
+    border: 1px black solid;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
 
     #submit-header {
         text-align: center;
         font-size: 1.8em;
-        margin-left: 50%;
-        margin-bottom: 3%;
     }
 
     #drag-and-drop-area {
         border: 2px dashed #a0522d;
-        padding: 20%;
+        padding: 10px;
         text-align: center;
-        width: 80%;
-        min-width: 250px;
-        max-width: 400px;
+        max-width: 100%;
         height: 200px;
-        margin-left: 10%;
-        margin-bottom: 5%;
+
         font-size: 1.2em;
 
         #file-input {
@@ -31,7 +34,6 @@
         flex-direction: column;
         align-items: center;
         font-size: 1em;
-        margin-left: 50%;
         min-width: 150px;
     }
 
@@ -44,12 +46,7 @@
         font-size: 1.1em;
         transition: background-color 0.3s ease;
         position: relative;
-        left: 75%;
-        right: 100%;
-        transform: translateX(-50%);
-        padding: 6%;
-        margin-top: 0.5%;
-        bottom: -10%;
+        padding: 10px;
     }
 
     #submit-button:hover {
