--- a/frontend/src/components/GameView.css
+++ b/frontend/src/components/GameView.css
@@ -1,22 +1,9 @@
 #game-view {
     display: flex;
     align-items: flex-start;
-    flex-direction: column;
+    flex-direction: row;
+    gap: 100px;
     margin-top: 100px;
-}
-
-#first-row {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 3%;
-}
-
-#chessboard-container {
-    width: calc(100% - 40px);
-    max-width: 800px;
-    height: calc(100% - 500px - 20px);
-    margin-top: 15%;
-    margin-left: 45%;
 }
 
 #winner-message {
@@ -25,12 +12,3 @@
     right: 10%;
 }
 
-#statistics {
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: auto;
-    width: calc(100% - 40px);
-    max-width: 600px;
-    margin-top: 2%;
-    margin-left: 33%;
-}
