--- a/frontend/src/components/Chessboard.css
+++ b/frontend/src/components/Chessboard.css
@@ -1,22 +1,18 @@
 #chessboard-header {
     text-align: center;
     font-size: 1.8em;
-    margin-bottom: 3%;
 }
 
-#BrowsableChessboard {
-    margin: auto;
+#chessboard {
     width: min-content;
     height: min-content;
-    padding: 3%;
+    padding: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    transform: scale(1.5);
     border: 1px solid #c0bdbb;
     border-radius: 20px;
-    margin-top: 5%;
 }
 
 #nextChessboardButton,
@@ -36,8 +32,4 @@
 #nextChessboardButton:hover,
 #previousChessboardButton:hover {
     background-color: #8b4513;
-}
-
-body {
-    margin-bottom: 0%;
 }
