fix(#73): UI layout
Co-authored-by: EljasV <EljasV@users.noreply.github.com>
Co-authored-by: emlyy <emlyy@users.noreply.github.com>

--- a/frontend/src/components/GameView.css
+++ b/frontend/src/components/GameView.css
@@ -2,12 +2,11 @@
     display: flex;
     align-items: flex-start;
     flex-direction: row;
-    gap: 100px;
+    justify-content: space-between;
     margin-top: 20px;
+    flex-wrap: wrap;
 }
 
 #winner-message {
-    margin-right: auto;
     position: relative;
-    right: 10%;
 }
