--- a/frontend/src/scss/SubmitForm.scss
+++ b/frontend/src/scss/SubmitForm.scss
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-width: 300px;
     gap: 30px;
 
     #submit-header {
