--- a/frontend/src/scss/SubmitForm.scss
+++ b/frontend/src/scss/SubmitForm.scss
@@ -30,7 +30,7 @@
         }
     }
 
-    #elo-config {
+    #config-slider {
         display: flex;
         flex-direction: column;
         align-items: center;
