feat(#89): add reusable card style sheet
Co-authored-by: mleikas@helsinki.fi <max.o.leikas@helsinki.fi>

--- a/frontend/src/scss/GameView.scss
+++ b/frontend/src/scss/GameView.scss
@@ -11,3 +11,10 @@
 #winner-message {
     position: relative;
 }
+
+.card {
+    box-shadow: 0 4px 8px 0 #a0522d;
+    transition: 0.3s;
+    border-radius: 20px;
+}
+
