feat: hide cards when empty

--- a/frontend/src/scss/GameView.scss
+++ b/frontend/src/scss/GameView.scss
@@ -15,7 +15,13 @@
     padding: 20px;
 }
 
+.card:empty {
+    display: none
+}
+
 .card-header {
     text-align: center;
     font-size: 1.8em;
 }
+
+
