--- a/frontend/src/scss/PlayerStats.scss
+++ b/frontend/src/scss/PlayerStats.scss
@@ -2,3 +2,14 @@
     color: red;
     font-weight: bold;
 }
+
+.stats-container {
+    display: flex;
+}
+
+.stats-column {
+    flex: 1;
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
