--- a/frontend/src/scss/NavigationBar.scss
+++ b/frontend/src/scss/NavigationBar.scss
@@ -8,30 +8,29 @@
     left: 20px;
     right: 20px;
     z-index: 1000;
-    margin-top: -8px;
+    border: none;
 }
 
-.nav-button {
+#nav-button {
     background-color: #a0522d;
     color: white;
     padding: 20px;
     margin-left: 18px;
     margin-right: 10px;
     border: none;
-    border-radius: 4px;
     cursor: pointer;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 8px;
-    font-size: 16px;
+    font-size: 18px;
     transition: background-color 0.3s ease;
     position: relative;
-    width: 150px;
+    width: 180px;
     text-align: center;
 }
 
-.nav-button:hover {
+#nav-button:hover {
     background-color: #8b4513;
 }
 
