--- a/frontend/src/scss/LogBox.scss
+++ b/frontend/src/scss/LogBox.scss
@@ -29,7 +29,7 @@
 
 textarea {
     width: 100%;
-    height: 100%;
-    overflow-y: scroll;
+    max-height: 700px;
     resize: none !important;
+    display: table !important;
 }
