feat(#146): Setting chessboard color theme updates whole UI

--- a/frontend/src/scss/Card.scss
+++ b/frontend/src/scss/Card.scss
@@ -1,5 +1,7 @@
+@import "./constants.scss";
+
 .card {
-    box-shadow: 0 4px 8px 0 #a0522d;
+    box-shadow: 0 4px 8px 0 var(--primary);
     transition: 0.3s;
     border-radius: 20px;
     padding: 20px;
