--- a/frontend/src/scss/SubmitForm.scss
+++ b/frontend/src/scss/SubmitForm.scss
@@ -1,3 +1,5 @@
+@import "./constants.scss";
+
 #drag-and-drop-container {
     top: 10%;
     height: 350px;
@@ -10,7 +12,7 @@
     gap: 30px;
 
     #drag-and-drop-area {
-        border: 2px dashed #a0522d;
+        border: 2px dashed var(--primary);
         padding: 10px;
         text-align: center;
         max-width: 100%;
@@ -32,7 +34,7 @@
     }
 
     #submit-button {
-        background-color: #a0522d;
+        background-color: var(--primary);
         color: white;
         border: none;
         border-radius: 4px;
@@ -44,6 +46,7 @@
     }
 
     #submit-button:hover {
-        background-color: #8b4513;
+        background-color: var(--secondary);
+        color: (--primary);
     }
 }
