fix: add default colors

--- a/frontend/src/scss/constants.scss
+++ b/frontend/src/scss/constants.scss
@@ -1,6 +1,6 @@
 :root {
-    --primary: none;
-    --secondary: none;
+    --primary: #b5876b;
+    --secondary: #f0dec7;
     --blue_marker: blue;
     --green_marker: green;
     --red_marker: red;
