--- a/frontend/src/scss/SubmitForm.scss
+++ b/frontend/src/scss/SubmitForm.scss
@@ -47,6 +47,6 @@
 
     #submit-button:hover {
         background-color: var(--secondary);
-        color: (--primary);
+        color: var(--primary);
     }
 }
