--- a/frontend/src/scss/SubmitForm.scss
+++ b/frontend/src/scss/SubmitForm.scss
@@ -33,7 +33,7 @@
         min-width: 150px;
     }
 
-    #submit-button {
+    #submit-button, #reset-button {
         background-color: var(--primary);
         color: white;
         border: none;
@@ -45,7 +45,7 @@
         padding: 10px;
     }
 
-    #submit-button:hover {
+    #submit-button:hover, #reset-button:hover {
         background-color: var(--secondary);
         color: var(--primary);
     }
