fix: render correct cfourboard color when chessboard has not rendered yet

--- a/frontend/src/scss/constants.scss
+++ b/frontend/src/scss/constants.scss
@@ -1,8 +1,8 @@
 :root {
     --primary: #b5876b;
     --secondary: #f0dec7;
-    --blue_marker: blue;
-    --green_marker: green;
-    --red_marker: red;
-    --yellow_marker: yellow;
+    --blue-marker: blue;
+    --green-marker: green;
+    --red-marker: red;
+    --yellow-marker: yellow;
 }
