--- a/frontend/src/scss/PlayerStats.scss
+++ b/frontend/src/scss/PlayerStats.scss
@@ -1,7 +1,7 @@
 @import "./constants.scss";
 
 .active-move {
-    color: var(--red_marker);
+    color: var(--red-marker);
     font-weight: bold;
 }
 
