--- a/frontend/src/scss/GameView.scss
+++ b/frontend/src/scss/GameView.scss
@@ -9,3 +9,22 @@
     flex-wrap: wrap;
     gap: 5px;
 }
+
+#game-view select {
+    background-color: var(--primary);
+    color: white;
+    padding: 1em;
+    margin-right: 10px;
+    margin-top: 5px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 1em;
+    transition: background-color 0.3s ease;
+}
+
+
+#game-view select:hover {
+    background-color: var(--secondary);
+    color: var(--primary);
+}
