--- a/frontend/src/scss/SubmitForm.scss
+++ b/frontend/src/scss/SubmitForm.scss
@@ -10,6 +10,7 @@
     align-items: center;
     min-width: 300px;
     gap: 30px;
+    margin-bottom: 30px;
 
     #drag-and-drop-area {
         border: 2px dashed var(--primary);
