--- a/frontend/src/scss/CSVCreator.scss
+++ b/frontend/src/scss/CSVCreator.scss
@@ -10,3 +10,8 @@
     font-size: 1em;
     transition: background-color 0.3s ease;
 }
+
+#CSVButton:hover {
+    background-color: var(--secondary);
+    color: var(--primary);
+}
