fix(#146): Show pointer cursor on clickable stats

--- a/frontend/src/scss/PlayerStats.scss
+++ b/frontend/src/scss/PlayerStats.scss
@@ -1,10 +1,19 @@
 .active-move {
     color: var(--red-marker);
     font-weight: bold;
+    cursor: pointer;
 }
 
 .stats-container {
     display: flex;
+}
+
+.move-category {
+    cursor: pointer;
+}
+
+.clickable {
+    cursor: pointer;
 }
 
 .stats-column {
